--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,7 @@ body {
 	justify-content: space-around;
 	height: 100%;
 	width: 100%;
+	background: linear-gradient(53deg, rgba(226,226,226,1) 0%, rgba(172,172,172,1) 100%); /* w3c */
 }
 
 .toppart {
@@ -48,21 +49,72 @@ body {
 	flex-direction: row;
 }
 
-.bottompart {
-	flex-grow: 0.3;
-}
-
 .fullscreenvid {
 	flex-grow: 0.6;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	border-radius: 50px;
 }
 
 .infoside {
 	flex-grow: 0.4;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
 
 #mainvideo {
-	width: 60%;
+	width: 90%;
+	/* border-radius: 50px; */
+	border: 9px #f3f3f3 solid;
+}
+
+#videofare {
+	width: 100%;
+}
+
+/* BOTTOMPART $$$$$$$$$$ */
+
+.bottompart {
+	display: flex;
+	flex-grow: 0.3;
+	flex-direction: row;
+	align-items: center;
+	justify-content: flex-start;
+	overflow-x: auto;
+white-space: nowrap;
+}
+
+.square {
+	height: 180px;
+	width: 180px;
+	border: 2px blue solid;
+	margin-left: 3%;
+	display: inline-block;
+	flex-shrink: 0;
+	margin-bottom: 1.3%;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 20px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 9px #b30037;
+    border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #b30037;
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #b30000;
 }
