--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,8 @@ body {
 #mainvideo {
 	width: 90%;
 	/* border-radius: 50px; */
-	border: 9px #f3f3f3 solid;
+	border: 7px #f3f3f3 solid;
+	border-radius: 10px;
 }
 
 #videofare {
@@ -84,18 +85,26 @@ body {
 	align-items: center;
 	justify-content: flex-start;
 	overflow-x: auto;
-white-space: nowrap;
 }
 
 .square {
-	height: 180px;
-	width: 180px;
-	border: 2px blue solid;
+	/* height: 100%; */
+	width: 200px;
+	border: 3px #b30000 solid;
 	margin-left: 3%;
-	display: inline-block;
 	flex-shrink: 0;
 	margin-bottom: 1.3%;
+	display: flex;
 }
+
+.thumbvideo {
+	width: 100%;
+	height: 100%;
+}
+
+/*  */
+/*  SCROLLBAR  */
+/*  */
 
 /* width */
 ::-webkit-scrollbar {
